# pi-tin

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  build-host.mjs  build-windows.ps1  configure-host-startup-windows.ps1  package.json  pnpm-lock.yaml  run-windows.ps1  start-host-windows.ps1  start-host.mjs  tsconfig.base.json  update-and-run-windows.ps1
.github/workflows/: windows-release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ExtensionUiDialog.tsx  HostSettingsDialog.tsx  InstanceSidebar.tsx  NewSessionDialog.tsx  SessionSidebar.tsx  use-dialog-focus.ts
apps/desktop/src/components/assistant-ui/: ChatFixture.tsx  MarkdownText.tsx  Thread.test.ts  Thread.tsx  ToolCard.tsx  turn-model.test.ts  turn-model.ts
apps/desktop/src/components/review/: ReviewPanel.tsx
apps/desktop/src/remote/: attention.test.ts  attention.ts  connection.test.ts  connection.ts  reducer.test.ts  reducer.ts  store.ts
apps/desktop/src/runtime/: PiRuntimeProvider.tsx  client-slash-commands.test.ts  client-slash-commands.ts  session-draft.test.ts  session-draft.ts
plans/: codex-chat-fidelity-plan.md  codex-pi-tin-behavior-comparison.md  full-session-control.md
scripts/: build-extension.mjs  build-host-controller.mjs  windows-session.mjs  windows-session.test.ts
