[package]
name = "pi-tin"
version = "0.1.1"
description = "Windows client for remote Pi sessions"
authors = ["Pi Tin contributors"]
edition = "2021"

[lib]
name = "pi_tin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
